--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,16 @@
 
         <!--(if target dev)><!-->
         <link rel="stylesheet/less" type="text/css" href="style.less" >
+        <link rel="stylesheet/less" type="text/css" href="css/featured.min.css">
+        <link rel="stylesheet/less" type="text/css" href="css/supersprite.min.css">
+        <link rel="stylesheet/less" type="text/css" href="css/form.min.css">
         <!--<!(endif)-->
 
         <!--(if target build)>
         <link rel="stylesheet" type="text/css" href="style.css" >
+        <link rel="stylesheet/less" type="text/css" href="css/featured.min.css">
+        <link rel="stylesheet/less" type="text/css" href="css/supersprite.min.css">
+        <link rel="stylesheet/less" type="text/css" href="css/form.min.css">
         <!(endif)-->
     </head>
     <body>
