--- a/src/html/search/input.html
+++ b/src/html/search/input.html
@@ -1,3 +1,3 @@
 <div class="search-input">
-    <input ng-id="{{elId}}" class="input" type="text" placeholder="Search..." ng-model="query" />
+    <input id="trackSearchInp" ng-id="{{elId}}" class="input" type="text" placeholder="Search..." ng-model="query" />
 </div>
