--- a/src/html/playlist/pane.html
+++ b/src/html/playlist/pane.html
@@ -2,6 +2,7 @@
     ng-style="{'background-image': 'url(' + backgroundImg + ')'}"
     data-background="{{!!backgroundImg}}"
     sol-vibrate="currentlyDragging">
+    <div class="innerPane">
     <div class="taBlock">
     	<select class="select"
     		id="challengeSelector"
@@ -81,4 +82,5 @@
             <user-playlists></user-playlists>
         </sol-popmenu>
     </section>
+    </div>
 </section>
