challengeBlock cleaned up

--- a/src/html/footer/bar.html
+++ b/src/html/footer/bar.html
@@ -2,7 +2,7 @@
     <google-signin></google-signin>
 
     <span class="title">
-        <img class="app-logo" src="css/assets/logo.svg"/>
+        <img class="app-logo" src="css/assets/logo.png"/>
         <!--<span class="text">{{appTitle}}</span>-->
     </span>
 
@@ -15,7 +15,4 @@
         <!--class="logo" target="_blank">-->
         <!--<img src="css/assets/echonest.svg" alt="Echo Nest" />-->
     <!--</a>-->
-
-    <!--<a ng-href="https://github.com/Tudmotu/{{appTitle | machineRead}}" title="Fork me on github"-->
-        <!--class="fork-me" target="_blank"><span class="text">Fork Me!</span></a>-->
 </footer>
