--- a/src/html/playlist/pane.html
+++ b/src/html/playlist/pane.html
@@ -21,7 +21,7 @@
             <span class="text" ng-show="shuffled">Shuffle is ON</span>
         </span>
 
-        <span class="action clear" ng-click="clearPlaylist()">
+        <span class="action clearAngular" ng-click="clearPlaylist()">
             <span class="text">Clear Playlist</span>
         </span>
 
