--- a/src/modules/peer-pane/peer-pane.html
+++ b/src/modules/peer-pane/peer-pane.html
@@ -25,7 +25,7 @@
             </div>
 
             <p>
-            <span>To connect to this host, open the Solarizd app on your mobile
+            <span>To connect to this host, open the Track Authority Music app on your mobile
                 device, and insert the above Host ID in the "Connect to a Host"
                 field. This will allow you to control the playlist from any
                 device.</span>
