--- a/src/html/media-panel/panel.html
+++ b/src/html/media-panel/panel.html
@@ -2,7 +2,8 @@
     <div class="media tab">
         <media-player id="media-player"></media-player>
         <div id="audio-player">
-        	<audio ng-src="{{audioSrc}}" id="audioPlayer" controls></audio>
+<!--         	<audio ng-src="{{audioSrc}}" id="audioPlayer" controls></audio> -->
+        	<div ng-bind-html-unsafe="audioPlayer"></div>
         </div>
     </div>
 
