--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="application-name" content="Music Player">
-        <meta name="author" content="Tudmotu">
-        <meta name="description" content="A simple angular-based music player">
+        <meta name="application-name" content="Track Authority Music">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta property="fb:admins" content="100000210646549"/>
+        <meta property="fb:app_id" content="267212653413336" />
+        <meta name="description" content="A platform to reward each other for sharing good music and curating perfect compilations" />
+        <meta name="keywords" content="radio, playlists, compilations, betting on music" />
+        <meta name="author" content="Eli A Taylor of TaylorMadeTraffic.com" />
+        <meta name="language" content="en-us" />
 
-        <meta name="viewport" content="user-scalable=no">
+           <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+           <meta name="apple-mobile-web-app-capable" content="yes"  />
+           <meta name="apple-mobile-web-app-status-bar-style" content="translucent" />
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-capable" content="yes">
 
-        <link rel="logo" type="image/svg" href="css/assets/logo.svg">
+<!--         <link rel="logo" type="image/svg" href="css/assets/logo.svg"> -->
         <link rel="icon" type="image/png" href="css/assets/logo.png">
         <link rel="shortcut icon"         href="css/assets/logo.png">
         <link rel="apple-touch-icon"      href="css/assets/logo.png">
 
-        <title>Solarizd</title>
+        <title>Track Authority Music</title>
 
         <!--(if target dev)><!-->
         <link rel="stylesheet/less" type="text/css" href="style.less" >
