loading ambiance data, but stil not respecting ng-if for user-login or ambiance-pane

--- a/src/html/playlist/challengeBlock.html
+++ b/src/html/playlist/challengeBlock.html
@@ -27,8 +27,8 @@
 				<div class="bigGridImg">
 					<a
 						target="_blank"
-						href="{{dataSources.api}}/playlist?cid={{challenge.challenge_id}}">
-						<img ng-src="{{dataSources.assets + challenge.challenge_image}}" />
+						href="{{dataSources.ci}}/playlist?cid={{challenge.challenge_id}}">
+						<img ng-src="{{dataSources.ci + challenge.challenge_image}}" />
 					</a>
 				</div>
 			</div>
